# mkeyboard-tez

./: README.adoc
utils/keyboardGenerator/: .gitignore  KeyHotswap.stl  README.md  pyproject.toml
utils/keyboardGenerator/Documents/: HowToAddNewComponent.adoc  examples.adoc
utils/keyboardGenerator/keyboardgenerator/: 1_X_Kailh_Socket_Holder.stl  KeySocket.stl  arduino.py  base.py  draw_shape.py  ergodox_arduino_pin.json  key.py  keyboard-layout(1).json  keyboard-layout.json  keyboard.py  keys.py  main.py  main.scad  mcu.py  pins.py  read_keysocket_file.py
v1/qmk/: config.h  info.json  readme.md  rules.mk  tez.c  tez.h
v1/qmk/keymaps/default/: keymap.c  readme.md
v2/: README.adoc
v2/3dprint_files/: case.scad  keyboard.scad  layout.scad  mcu.scad  parameters.scad  pcb.scad  text.scad  type_c.scad  utils.scad  via.scad
v2/qmk/: readme.md  rules.mk  tez.c  tez.h
v2/qmk/keymaps/default/: config.h  keymap.c
v2/qmk/rev1/: config.h  info.json  rev1.c  rev1.h
v2/stl/: backplate-left.stl  backplate-right.stl  case-left.stl  case-right.stl  diode_bending_template.stl  pcb-left.stl  pcb-right.stl
v3/: keyboard-layout-tezv3.json  keyboard-layout-tezv3_v2.json
